--- a/projeto_site/cadastro.html
+++ b/projeto_site/cadastro.html
@@ -46,6 +46,7 @@
     <!-- Barra de navegação [Fim] -->
     <!-- Corpo da página [Início] -->
     <main>
+
         <section>
             <div class="container-fluid px-0 bg-cadastro">
                 <div class="container">
@@ -59,8 +60,7 @@
                     <div class="col-sm-12 px-0">
                         <ul class="nav nav-tabs custom-form">
                             <li class="nav-item">
-                                <a class="nav-link active custom-form" data-bs-toggle="tab"
-                                    href="#cadastrousuario">Usuário</a>
+                                <a class="nav-link active custom-form" data-bs-toggle="tab" href="#cadastrousuario">Usuário</a>
                             </li>
                             <li>
                                 <a class="nav-link custom-form" data-bs-toggle="tab" href="#cadastroempresa">Empresa</a>
@@ -140,6 +140,7 @@
                 </div>
             </div>
         </section>
+
     </main>
     <!-- Corpo da página [Fim] -->
     <!-- Rodapé [Início] -->
