--- a/projeto_site/login.html
+++ b/projeto_site/login.html
@@ -46,6 +46,7 @@
     <!-- Barra de navegação [Fim] -->
     <!-- Corpo da página [Início] -->
     <main>
+        
         <section>
             <div class="container-fluid">
                 <div class="row">
@@ -72,8 +73,7 @@
                                 <div class="form-check form-switch">
                                     <input class="form-check-input" type="checkbox" role="switch"
                                         id="flexSwitchCheckDefault">
-                                    <label class="form-check-label" for="flexSwitchCheckDefault">Mantenha-me
-                                        logado</label>
+                                    <label class="form-check-label" for="flexSwitchCheckDefault">Mantenha-me logado</label>
                                 </div>
                                 <div>
                                     <a href="#" class="cor-link">Esqueceu a senha?</a>
@@ -87,6 +87,7 @@
                 </div>
             </div>
         </section>
+
     </main>
     <!-- Corpo da página [Fim] -->
     <!-- Rodapé [Início] -->
