--- a/projeto_site/projetos_cursos.html
+++ b/projeto_site/projetos_cursos.html
@@ -46,23 +46,23 @@
     <!-- Barra de navegação [Fim] -->
     <!-- Corpo da página [Início] -->
     <main>
+
         <section>
             <div class="container-fluid bg-projeto">
                 <div class="container">
                     <h1>Trilha do sucesso</h1>
-                    <p>Explore oportunidades gratuitas que podem impulsionar sua carreira profissional</p>
+                    <p>Explore oportunidades gratuitas que podem impulsionar sua carreira profissional!</p>
                 </div>
             </div>
-
             <div class="container py-5">
-                <h2>Tudo sobre Cursos & Projetos</h2>
+                <h2>Tudo sobre Projetos & Cursos</h2>
                 <article>
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="card mt-4 mb-3 shadow">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="/imagens/img_projeto_recode.png" class="img-card-projeto" alt="recode">
+                                        <img src="/imagens/img_card_projeto_recode.png" class="img-card-projeto" alt="recode">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -88,7 +88,7 @@
                             <div class="card shadow">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="#" class="img-card-projeto" alt="educarmais">
+                                        <img src="/imagens/img_card_projeto_educarmais.png" class="img-card-projeto" alt="educarmais">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -114,7 +114,7 @@
                             <div class="card mt-3 shadow">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="#" class="img-card-projeto" alt="programaavançar">
+                                        <img src="/imagens/img_card_projeto_progavançar.png" class="img-card-projeto" alt="programaavançar">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -140,7 +140,7 @@
                             <div class="card mt-3 shadow">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="#" class="img-card-projeto" alt="futurocerto">
+                                        <img src="/imagens/img_card_projeto_futurocerto.png" class="img-card-projeto" alt="futurocerto">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -166,7 +166,7 @@
                             <div class="card mt-3 mb-5 shadow">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="#" class="img-card-projeto" alt="agir">
+                                        <img src="/imagens/img_card_projeto_agir.png" class="img-card-projeto" alt="agir">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -191,6 +191,7 @@
                 </article>
             </div>
         </section>
+
     </main>
     <!-- Corpo da página [Fim] -->
     <!-- Rodapé [Início] -->
