--- a/projeto_site/index.html
+++ b/projeto_site/index.html
@@ -46,6 +46,7 @@
     <!-- Barra de navegação [Fim] -->
     <!-- Corpo da página [Início] -->
     <main>
+
         <section>
             <div class="container-fluid bg-home d-flex align-items-end">
                 <div class="container-fluid px-0">
@@ -76,15 +77,13 @@
                             <i class="bi bi-building-fill-check fs-1"></i>
                             <h5>Acesso a Empresas Promissoras</h5>
                             <p class="font-paragraf">Oferecemos a oportunidade de trabalhar com as melhores
-                                organizações.
-                            </p>
+                                organizações.</p>
                         </div>
                         <div class="col-md-3">
                             <i class="bi bi-chat-square-dots-fill fs-1"></i>
                             <h5>Feedback e Acompanhamento</h5>
                             <p class="font-paragraf">Acompanhe o progresso das suas candidaturas e mantenha-se
-                                informado.
-                            </p>
+                                informado.</p>
                         </div>
                     </div>
                 </div>
@@ -155,8 +154,7 @@
                             <div class="card my-3 shadow">
                                 <div class="row g-0">
                                     <div class="col-md-4">
-                                        <img src="/imagens/img_card_home_comercio.jpg" class="card-img"
-                                            alt="comércio-vendas">
+                                        <img src="/imagens/img_card_home_comercio.jpg" class="card-img" alt="comércio-vendas">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -236,11 +234,9 @@
                                 <div id="panelsStayOpen-collapseFor" class="accordion-collapse collapse"
                                     aria-labelledby="panelsStayOpen-headingFor">
                                     <div class="list-group custom-list rounded-bottom">
-                                        <a href="#" class="list-group-item list-group-item-action">A second link
-                                            item</a>
+                                        <a href="#" class="list-group-item list-group-item-action">A second link item</a>
                                         <a href="#" class="list-group-item list-group-item-action">A third link item</a>
-                                        <a href="#" class="list-group-item list-group-item-action">A fourth link
-                                            item</a>
+                                        <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
                                     </div>
                                 </div>
                             </div>
@@ -248,7 +244,36 @@
                     </aside>
                 </div>
             </div>
+
+            <div class="container-fluid bg-home-time py-4 text-white">
+                <div class="container text-center">
+                    <h1 class="mb-5">Nosso Time</h1>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <img src="/imagens/img_nossotime_man3.jpg" alt="John Tarly" class="bd-placeholder-img rounded-circle" width="150" height="150">
+                            <h3>John Tarly</h3>
+                            <p>Some representative placeholder content for the three columns of text below the carousel.</p>
+                        </div>
+                        <div class="col-md-3">
+                            <img src="/imagens/img_nossotime_man2.jpg" alt="Tom Sunderland" class="bd-placeholder-img rounded-circle" width="150" height="150">
+                            <h3>Tom Sunderland</h3>
+                            <p>Some representative placeholder content for the three columns of text below the carousel.</p>
+                        </div>
+                        <div class="col-md-3">
+                            <img src="/imagens/img_nossotime_man1.jpg" alt="Samuel Hardy" class="bd-placeholder-img rounded-circle" width="150" height="150">
+                            <h3>Samuel Hardy</h3>
+                            <p>Some representative placeholder content for the three columns of text below the carousel.</p>
+                        </div>
+                        <div class="col-md-3">
+                            <img src="/imagens/img_nossotime_woman.jpg" alt="Manuella Nevoresky" class="bd-placeholder-img rounded-circle" width="150" height="150">
+                            <h3>Manuella Nevoresky</h3>
+                            <p>Some representative placeholder content for the three columns of text below the carousel.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+
     </main>
     <!-- Corpo da página [Fim] -->
     <!-- Rodapé [Início] -->
