Alteração dos campos da página cadastro

--- a/projeto_site/cadastro.html
+++ b/projeto_site/cadastro.html
@@ -71,25 +71,25 @@
                             <div class="tab-pane fade show active" id="cadastrousuario">
                                 <form>
                                     <div class="row">
-                                        <div class="col-md-12">
+                                        <div class="col-md-12 d-flex gap-2">
                                             <input type="text" class="form-control" placeholder="Nome Completo"
                                                 required>
+                                            <input type="text" class="form-control" placeholder="CPF" required>
                                         </div>
                                         <div class="col-md-12 d-flex mt-3 gap-2">
-                                            <input type="text" class="form-control" placeholder="CEP">
+                                            <input type="text" class="form-control" placeholder="Endereço">
                                             <input type="tel" class="form-control" placeholder="Celular">
                                         </div>
-                                        <div class="col-md-12 d-flex mt-3 gap-2">
-                                            <input type="email" class="form-control" placeholder="Email">
-                                            <input type="password" class="form-control" placeholder="Senha">
+                                        <div class="col-md-12 d-flex mt-3 gap-2"> 
+                                            <input type="email" class="form-control" placeholder="Email" required>
+                                            <input type="password" class="form-control" placeholder="Senha" required>
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-check custom-check">
                                                 <input class="form-check-input" type="checkbox" value="" id="info">
                                                 <label class="form-check-label" for="info">
                                                     Autorizo a JobTeens enviar informações sobre vagas, eventos e
-                                                    projetos
-                                                    gratuitos de nossos parceiros e colaboradores
+                                                    projetos gratuitos de nossos parceiros e colaboradores
                                                 </label>
                                             </div>
                                         </div>
@@ -104,19 +104,22 @@
                             <div class="tab-pane fade" id="cadastroempresa">
                                 <form>
                                     <div class="row">
-                                        <div class="col-md-12">
+                                        <div class="col-md-12 d-flex gap-2">
                                             <input type="text" class="form-control" placeholder="Nome da Empresa"
                                                 required>
-                                        </div>
-                                        <div class="col-md-12 d-flex mt-3 gap-2">
                                             <input type="text" class="form-control" placeholder="CNPJ" required>
-                                            <input type="text" class="form-control" placeholder="Nº de Funcionários">
-                                            <input type="text" class="form-control" placeholder="CEP">
                                         </div>
                                         <div class="col-md-12 d-flex mt-3 gap-2">
-                                            <input type="text" class="form-control" placeholder="Email corporativo">
+                                            <input type="text" class="form-control" placeholder="Endereço">
+                                            <input type="text" class="form-control" placeholder="Site">
+                                        </div>
+                                        <div class="col-md-12 d-flex mt-3 gap-2">
+                                            <input type="text" class="form-control" placeholder="Descrição">
                                             <input type="tel" class="form-control" placeholder="Telefone">
-                                            <input type="password" class="form-control" placeholder="Senha">
+                                        </div>
+                                        <div class="col-md-12 d-flex mt-3 gap-2">
+                                            <input type="text" class="form-control" placeholder="Email corporativo" required>
+                                            <input type="password" class="form-control" placeholder="Senha" required>
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-check custom-check">
