--- a/projeto_site/index.html
+++ b/projeto_site/index.html
@@ -251,23 +251,23 @@
                     <div class="row">
                         <div class="col-md-3">
                             <img src="/imagens/img_nossotime_man3.jpg" alt="John Tarly" class="bd-placeholder-img rounded-circle" width="150" height="150">
-                            <h3>John Tarly</h3>
-                            <p>Some representative placeholder content for the three columns of text below the carousel.</p>
+                            <h4>John Tarly</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         </div>
                         <div class="col-md-3">
                             <img src="/imagens/img_nossotime_man2.jpg" alt="Tom Sunderland" class="bd-placeholder-img rounded-circle" width="150" height="150">
-                            <h3>Tom Sunderland</h3>
-                            <p>Some representative placeholder content for the three columns of text below the carousel.</p>
+                            <h4>Tom Sunderland</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         </div>
                         <div class="col-md-3">
                             <img src="/imagens/img_nossotime_man1.jpg" alt="Samuel Hardy" class="bd-placeholder-img rounded-circle" width="150" height="150">
-                            <h3>Samuel Hardy</h3>
-                            <p>Some representative placeholder content for the three columns of text below the carousel.</p>
+                            <h4>Samuel Hardy</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         </div>
                         <div class="col-md-3">
                             <img src="/imagens/img_nossotime_woman.jpg" alt="Manuella Nevoresky" class="bd-placeholder-img rounded-circle" width="150" height="150">
-                            <h3>Manuella Nevoresky</h3>
-                            <p>Some representative placeholder content for the three columns of text below the carousel.</p>
+                            <h4>Manuella Nevoresky</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                 </div>
