Alteração da página de vagas

--- a/projeto_site/index.html
+++ b/projeto_site/index.html
@@ -94,7 +94,7 @@
                     <!-- Card 1 -->
                     <div class="col-md-8">
                         <h2>Oportunidades para você</h2>
-                        <div class="card mt-4 my-3 shadow">
+                        <div class="card mt-4 my-3">
                             <div class="card-body">
                                 <h5 class="card-title">Analista de Sistemas</h5>
                                 <p class="card-text">Os analistas de sistemas estudam os diversos sistemas existentes
@@ -102,7 +102,7 @@
                                 <a href="vagas.html" class="btn btn-home">Conferir</a>
                             </div>
                         </div>
-                        <div class="card my-3 shadow">
+                        <div class="card my-3">
                             <div class="card-body">
                                 <h5 class="card-title">Engenheiro de Software</h5>
                                 <p class="card-text">O engenheiro de software é o profissional que desenvolve programas,
@@ -110,7 +110,7 @@
                                 <a href="vagas.html" class="btn btn-home">Conferir</a>
                             </div>
                         </div>
-                        <div class="card my-3 shadow">
+                        <div class="card my-3">
                             <div class="card-body">
                                 <h5 class="card-title">Engenheiro Civil</h5>
                                 <p class="card-text">Engenharia Civil é o responsável por todo processo construtivo da
@@ -121,7 +121,7 @@
                         <!-- Card 2 -->
                         <div class="my-5">
                             <h2>Áreas profissionais populares</h2>
-                            <div class="card mt-4 my-3 shadow">
+                            <div class="card mt-4 my-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
                                         <img src="/imagens/img_card_home_TI.jpg" class="card-img" alt="TI">
@@ -136,7 +136,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card my-3 shadow">
+                            <div class="card my-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
                                         <img src="/imagens/img_card_home_adm.jpg" class="card-img" alt="administração">
@@ -151,7 +151,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card my-3 shadow">
+                            <div class="card my-3">
                                 <div class="row g-0">
                                     <div class="col-md-4">
                                         <img src="/imagens/img_card_home_comercio.jpg" class="card-img" alt="comércio-vendas">
@@ -172,7 +172,7 @@
                     <aside class="col-md-4">
                         <h3>Trilha do sucesso</h3>
                         <h6>Tudo para alavancar sua carreira</h6>
-                        <div class="accordion shadow rounded-bottom" id="accordionPanelsStayOpenExample">
+                        <div class="accordion rounded-bottom" id="accordionPanelsStayOpenExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
