--- a/projeto_site/vagas.html
+++ b/projeto_site/vagas.html
@@ -63,103 +63,219 @@
                     </div>
                 </div>
             </div>
+
             <div class="container py-4">
                 <h1>Vagas</h1>
-                <h5>Oportunidades Disponíveis</h5>
-                <div class="row">
-                    <div class="col-md-12 pt-4">
-                        <ul class="list-group">
-                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                                <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Desenvolvedor Web</div>
-                                    Empresa A
-                                </div>
-                                <div class="col-md-4 d-flex flex-column">
-                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                                </div>
-                            </li>
-                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                                <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Analista de Marketing</div>
-                                    Empresa B
-                                </div>
-                                <div class="col-md-4 d-flex flex-column">
-                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                                </div>
-                            </li>
-                            <li class="list-group-item list-group-item d-flex flex-column flex-sm-row gap-2">
-                                <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Designer Gráfico</div>
-                                    Empresa C
-                                </div>
-                                <div class="col-md-4 d-flex flex-column">
-                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                                </div>
-                            </li>
-                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                                <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Gerente de Projetos</div>
-                                    Empresa D
-                                </div>
-                                <div class="col-md-4 d-flex flex-column">
-                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                                </div>
-                            </li>
-                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                                <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Assistente Administrativo</div>
-                                    Empresa E
-                                </div>
-                                <div class="col-md-4 d-flex flex-column">
-                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                                </div>
-                            </li>
-                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                                <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Engenheiro de Software</div>
-                                    Empresa F
-                                </div>
-                                <div class="col-md-4 d-flex flex-column">
-                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                                </div>
-                            </li>
-                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                                <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Analista de Recursos Humanos</div>
-                                    Empresa G
-                                </div>
-                                <div class="col-md-4 d-flex flex-column">
-                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                                </div>
-                            </li>
-                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                                <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Consultor de Vendas </div>
-                                    Empresa H
-                                </div>
-                                <div class="col-md-4 d-flex flex-column">
-                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                                </div>
-                            </li>
-                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                                <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Analista Financeiro</div>
-                                    Empresa I
-                                </div>
-                                <div class="col-md-4 d-flex flex-column">
-                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                                </div>
-                            </li>
-                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                                <div class="ms-2 me-auto">
-                                    <div class="fw-bold">Suporte Técnico</div>
-                                    Empresa J
-                                </div>
-                                <div class="col-md-4 d-flex flex-column">
-                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                                </div>
-                            </li>
-                        </ul>
+                <h5>Oportunidades disponíveis</h5>
+                <div class="row pt-4">
+                    <div class="col-md-6">
+                        <div class="card mb-4">
+                            <div class="card-header">Empresa A</div>
+                            <div class="card-body pb-2">
+                                <h5 class="card-title">Desenvolvedor Web</h5>
+                                <ul class="list-vagas">
+                                    <li class="card-text"><strong>Descrição: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Requisitos: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Salário: </strong>Lorem ipsum dolor sit amet.</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-4 d-flex flex-column mx-3">
+                                <button class="btn btn-sm btn-list-vagas">Cadastre-se</button>
+                            </div>
+                            <div class="card-footer mt-3">
+                                <i class="bi bi-calendar-check me-2"></i>
+                                03 de Abril 2023
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="card mb-4">
+                            <div class="card-header">Empresa B</div>
+                            <div class="card-body pb-2">
+                                <h5 class="card-title">Analista de Marketing</h5>
+                                <ul class="list-vagas">
+                                    <li class="card-text"><strong>Descrição: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Requisitos: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Salário: </strong>Lorem ipsum dolor sit amet.</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-4 d-flex flex-column mx-3">
+                                <button class="btn btn-sm btn-list-vagas">Cadastre-se</button>
+                            </div>
+                            <div class="card-footer mt-3">
+                                <i class="bi bi-calendar-check me-2"></i>
+                                15 de Outubro 2023
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="card mb-4">
+                            <div class="card-header">Empresa C</div>
+                            <div class="card-body pb-2">
+                                <h5 class="card-title">Designer Gráfico</h5>
+                                <ul class="list-vagas">
+                                    <li class="card-text"><strong>Descrição: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Requisitos: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Salário: </strong>Lorem ipsum dolor sit amet.</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-4 d-flex flex-column mx-3">
+                                <button class="btn btn-sm btn-list-vagas">Cadastre-se</button>
+                            </div>
+                            <div class="card-footer mt-3">
+                                <i class="bi bi-calendar-check me-2"></i>
+                                07 de Fevereiro 2023
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="card mb-4">
+                            <div class="card-header">Empresa D</div>
+                            <div class="card-body pb-2">
+                                <h5 class="card-title">Assistente Administrativo</h5>
+                                <ul class="list-vagas">
+                                    <li class="card-text"><strong>Descrição: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Requisitos: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Salário: </strong>Lorem ipsum dolor sit amet.</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-4 d-flex flex-column mx-3">
+                                <button class="btn btn-sm btn-list-vagas">Cadastre-se</button>
+                            </div>
+                            <div class="card-footer mt-3">
+                                <i class="bi bi-calendar-check me-2"></i>
+                                01 de julho 2023
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="card mb-4">
+                            <div class="card-header">Empresa E</div>
+                            <div class="card-body pb-2">
+                                <h5 class="card-title">Gerente de Projetos</h5>
+                                <ul class="list-vagas">
+                                    <li class="card-text"><strong>Descrição: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Requisitos: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Salário: </strong>Lorem ipsum dolor sit amet.</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-4 d-flex flex-column mx-3">
+                                <button class="btn btn-sm btn-list-vagas">Cadastre-se</button>
+                            </div>
+                            <div class="card-footer mt-3">
+                                <i class="bi bi-calendar-check me-2"></i>
+                                03 de Junho 2023
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="card mb-4">
+                            <div class="card-header">Empresa F</div>
+                            <div class="card-body pb-2">
+                                <h5 class="card-title">Engenheiro de Software</h5>
+                                <ul class="list-vagas">
+                                    <li class="card-text"><strong>Descrição: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Requisitos: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Salário: </strong>Lorem ipsum dolor sit amet.</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-4 d-flex flex-column mx-3">
+                                <button class="btn btn-sm btn-list-vagas">Cadastre-se</button>
+                            </div>
+                            <div class="card-footer mt-3">
+                                <i class="bi bi-calendar-check me-2"></i>
+                                05 de Agosto 2023
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="card mb-4">
+                            <div class="card-header">Empresa G</div>
+                            <div class="card-body pb-2">
+                                <h5 class="card-title">Analista de Recursos Humanos</h5>
+                                <ul class="list-vagas">
+                                    <li class="card-text"><strong>Descrição: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Requisitos: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Salário: </strong>Lorem ipsum dolor sit amet.</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-4 d-flex flex-column mx-3">
+                                <button class="btn btn-sm btn-list-vagas">Cadastre-se</button>
+                            </div>
+                            <div class="card-footer mt-3">
+                                <i class="bi bi-calendar-check me-2"></i>
+                                09 de Dezembro 2023
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="card mb-4">
+                            <div class="card-header">Empresa H</div>
+                            <div class="card-body pb-2">
+                                <h5 class="card-title">Consultor de Vendas</h5>
+                                <ul class="list-vagas">
+                                    <li class="card-text"><strong>Descrição: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Requisitos: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Salário: </strong>Lorem ipsum dolor sit amet.</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-4 d-flex flex-column mx-3">
+                                <button class="btn btn-sm btn-list-vagas">Cadastre-se</button>
+                            </div>
+                            <div class="card-footer mt-3">
+                                <i class="bi bi-calendar-check me-2"></i>
+                                21 de Setembro 2023
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="card mb-4">
+                            <div class="card-header">Empresa I</div>
+                            <div class="card-body pb-2">
+                                <h5 class="card-title">Analista Financeiro</h5>
+                                <ul class="list-vagas">
+                                    <li class="card-text"><strong>Descrição: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Requisitos: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Salário: </strong>Lorem ipsum dolor sit amet.</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-4 d-flex flex-column mx-3">
+                                <button class="btn btn-sm btn-list-vagas">Cadastre-se</button>
+                            </div>
+                            <div class="card-footer mt-3">
+                                <i class="bi bi-calendar-check me-2"></i>
+                                10 de Janeiro 2023
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="card mb-4">
+                            <div class="card-header">Empresa J</div>
+                            <div class="card-body pb-2">
+                                <h5 class="card-title">Suporte Técnico</h5>
+                                <ul class="list-vagas">
+                                    <li class="card-text"><strong>Descrição: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Requisitos: </strong>Lorem ipsum dolor sit amet.</li>
+                                    <li class="card-text"><strong>Salário: </strong>Lorem ipsum dolor sit amet.</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-4 d-flex flex-column mx-3">
+                                <button class="btn btn-sm btn-list-vagas">Cadastre-se</button>
+                            </div>
+                            <div class="card-footer mt-3">
+                                <i class="bi bi-calendar-check me-2"></i>
+                                25 de Maio 2023
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
