--- a/projeto_site/cadastro.html
+++ b/projeto_site/cadastro.html
@@ -114,7 +114,7 @@
                                             <input type="text" class="form-control" placeholder="Site">
                                         </div>
                                         <div class="col-md-12 d-flex mt-3 gap-2">
-                                            <input type="text" class="form-control" placeholder="Descrição">
+                                            <input type="text" class="form-control" placeholder="Área de atuação">
                                             <input type="tel" class="form-control" placeholder="Telefone">
                                         </div>
                                         <div class="col-md-12 d-flex mt-3 gap-2">
